# SMAP

./: .gitignore  .readthedocs.yaml  README.md  SMAP.m
+gui/: GlobalParameterSettings.m  GuiChannel.m  GuiFile.m  GuiFilterTable.m  GuiFormat.m  GuiHistSlider.m  GuiLocalize.m  GuiMainSMAP.m  GuiPluginGroup.m  GuiPluginWindow.m  GuiRender.m  SEAnnotation.m  SEEvaluationGui.m  SEExploreGui.m  SEGUISettings.m  SEMainGui.m  SESort.m  SearchHelp.m  Undo.m
+gui/icons/: free.tif  point.tif  polygon.tif
+gui/private/: checkforsingleimages.m  controlVisibility.m  initglobalsettings.m  makeGeometricModelList.m  makePluginMenu.m  makeplugincallfile.m  pluginnames.m
+interfaces/: DialogProcessor.m  GuiModuleInterface.m  GuiParameterInterface.m  LayerInterface.m  LocDataInterface.m  LocTransform.m  LocTransformN.m  LocTransformN0.m  LocalizationData.m  PSFmodel.m  ParameterData.m  ParameterInterface.m  Renderer.m  SEEvaluationProcessor.m  SEProcessor.m  SEsites.m  SiteExplorer.m  SyncBuffer.m  Workflow.m  WorkflowBuffer.m  WorkflowData.m  WorkflowFitter.m  WorkflowInterface.m  WorkflowModule.m  imageloaderSMAP.m  metadataSMAP.m  plugin4workflow.m
+interfaces/private/: anyfilter.m  concentratefilelist.m  findAffineTransformZ.m  getlocs.m  getlocs2.m  getlocs2ind.m
+siteexplorer/: SEsites.m  SiteExplorer.m
Documentation/: Global_parameters_structure_names.md  ListOfPlugins.xlsx  ListofParameters.xlsx  LocData_fields.txt  ParameterNames.txt  ProgrammingGuide.xml  SMAP_manual_NPC.xml
Documentation/Manual/: ListOfPlugins.xlsx  Plugin_Template.m  SMAPStep-by-StepGuide.md  SMAP_ProgrammingGuide.xml  SMAP_user_guide.md  Workflow_Template.m
LocMoFit/: locsImgModel.m  locsModel.m  modelList.m
LocMoFit/@LocMoFit/: fit.m  (+22 more)
PSFAnalyses/: FWHM.m  PSFAnalyses.m
fit3Dcspline/: Licence.txt  README.md  calibrate3D_GUI_g.m  calibrate3D_g.m  calibrate3D_gs.m  calibrate3Daberrations.m  calibrate_4pi.m  calibrate_4pi_v2.m  calibrate_4pi_v3.m  calibrate_globalworkflow.m  correct_3Daberrations.m  evalSpline.m  example_3D_fit.m  example_3D_fit_NM.m  example_calibration.m  example_depth_aberration.m  example_fit_2DPSF.m  example_fit_astig.m  settings_3D.txt  simSplinePSF.m  simplefitter_GUI.m  simplefitter_GUI.prj  simplefitter_cspline.m  simulate2c.m  sxsy2z.m
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/: CMakeLists.txt
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/CPUmleFit_LM/: mexFunction.cpp
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/CPUmleFit_LM/lib/: CPUgaussLib.h  definitions.h
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/CPUmleFit_LM/src/: CPUgaussLib.cpp  CPUmleFit_LM.cpp  CPUsplineLib.cpp
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/GPUmleFit_LM/: mexFunction.cpp
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/GPUmleFit_LM/lib/: GPUgaussLib.cuh  GPUmleFit_LM_EMCCD.h  GPUmleFit_LM_sCMOS.h  MatInvLib.h  definitions.h
fit3Dcspline/source/GPUmleFit_LM_SingleChannel_Linux/GPUmleFit_LM/src/: wrapper.cu
other/: BP_Gauss_analysis.m  CallBatchprocessorScript.m  ConvertVideosTo_mp4.m  GaussApproximateSplinePSF.m  Jones_matrices.m  KineticProcessSimulation.m  KostekKCanalysis.m  SegmentFibrilsEMmanually.m  VibrationAnalysis.m  addSMAPpath.m  alignNUPsVilma.m  analyzeBurstsIva4.m  analyzeBursts_Alla.m  analyzeBursts_AllaAG.m  audiospectrum.m  averageconnected.m  cameranoiseevaluation.m  convert2mp4.m  convertLearnedPSFto3dcal.m  countNupsDL.m  countNupsDL_confocal.m  createCMOSTestdata.m  fitCircleImg.m  importNPCsVilma.m  locprecvsbg.m  meanlifetimeVssimulatedlifetime.m  plotTimeProfiles4Pi.m  plotaudiospectrum.m  plotaudiospectrumfrommatfile.m  plotvibrationanalysis.m  profilesEnrico.m  radialfourier.m  readCzi.m  rotatedGaussianPSF.m  singletiff2stack.m  testcorraveraging.m
settings/: CameraCalibration.xls  RiesLab_cameras.mat  SimpleGUI.txt  Yale4Pi_settings_3D.txt  Yiming4Pi_settings_3D.txt  cameras.mat  cameras2.mat  cameras_Hamamatsu.mat  countingGUI.txt  custommenu.txt  infostruct.txt  parlistdefault.txt  yulegui.txt
shared/: Grouper.m  RenameField.mexmaci64  TotalRender.m  adddirectoriesforcompile.m  asymmetry.m  checknames.m  displayerSMAP.m  drawerSMAP.m  field2cell.m  get2Dcorrshift.m  get3Dcorrshift.m  getPI.m  getRoiTif.m  getfilemode.m  indgrouped2ungrouped.m  indungrouped2grouped.m  initGuiAfterLoad.m  initaxis.m  mymakelut.m  nucleationNCoat2.m  pos2angle.m  readfile_ome.m  removeFieldsSML.m  renderSMAP.m  savesml.m  simulatecamera.m  simulatelocs.m  xcorrangle.m
(+1764 files in other folders)
